--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h1>Congratulations!!! </h1>
       <h2>Welcome to PK's World| Only PK with JD Allowed!!!</h2>
     <h4>aws demonstrated</h4>
-    <h3>This application was deployed using AWS CodeDeploy.</h3>
+    <!--<h3>This application was deployed using AWS CodeDeploy.</h3> -->
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
 </body>
