--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>AAR DEMO | AWS CLOUD DEPLOYMENT</title>
+  <title>PK DEMO | AWS CLOUD DEPLOYMENT</title>
   <style>
     body {
       color: #000080;
@@ -29,8 +29,8 @@
     <img src="https://s3.ap-south-1.amazonaws.com/www.basava.com/aar_logo_final.png" style="max-width: 20%;">
     <h1>Congratulations!!! </h1>
       <h2>Welcome to PK's World| Only PK with JD Allowed!!!</h2>
-    <h4>aws demonstrated</h4>
-    <!--<h3>This application was deployed using AWS CodeDeploy.</h3> -->
+    <!-- <h4>aws demonstrated</h4> -->
+    <h3>This application was deployed using AWS CodeDeploy.</h3> 
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
 </body>
