--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>PK DEMO | AWS CLOUD DEPLOYMENT</title>
+  <title>AWS CHANGE DONES | AWS CLOUD DEPLOYMENT</title>
   <style>
     body {
       color: #000080;
